<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context=".LoginActivity">
<!--    //android:background="@drawable/splash">-->

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="208dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/image"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/do_you_love_what_you_do_in_store"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:gravity="center"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/we_make_sure_you_do"
        android:textColor="#ee9235"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        />

    <EditText
        android:id="@+id/et_userName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/oval_shape"
        android:paddingLeft="10dp"
        android:hint="@string/username" />
    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"

      android:hint="@string/password"
        android:paddingLeft="10dp"
        android:background="@drawable/oval_shape"/>
    <Button
        android:id="@+id/btLogin"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/login"
        android:textAllCaps="true"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"

        android:background="@drawable/shape"/>
    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:text="@string/forget_password"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">
    <CheckBox
        android:id="@+id/checked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me" />
        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terms_condition"
            android:layout_marginLeft="10dp"
            android:textSize="13sp"
            android:textColor="#ee9235"

            />
    </LinearLayout>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/i_agree_to"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18dp"
        android:textColor="@color/black"
        android:text="@string/follow_us_on"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/linkedin"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/facebook"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/instagram"/>



    </LinearLayout>

</LinearLayout>